[gd_scene load_steps=35 format=2]

[ext_resource path="res://addons/PaletteSwap/PaletteSwap.gdshader" type="Shader" id=1]
[ext_resource path="res://src/Actors/charge_shader.tres" type="Shader" id=2]
[ext_resource path="res://src/Levels/SigmaPalace/ElevatorPlatform.gd" type="Script" id=3]
[ext_resource path="res://src/Levels/JakobElevator/ending_loop.png" type="Texture" id=4]
[ext_resource path="res://src/Levels/JakobElevator/bg_earth.png" type="Texture" id=5]
[ext_resource path="res://src/Levels/JakobElevator/earth_pallette.png" type="Texture" id=6]
[ext_resource path="res://src/Effects/Materials/jakob_palette_material.tres" type="Material" id=7]
[ext_resource path="res://src/Levels/JakobElevator/elevator.png" type="Texture" id=8]
[ext_resource path="res://src/Actors/Player/x_sprites/x.res" type="SpriteFrames" id=9]
[ext_resource path="res://src/Levels/SigmaPalace/ElevatorWalls.gd" type="Script" id=10]
[ext_resource path="res://src/Levels/SigmaPalace/Ending/BG.gd" type="Script" id=11]
[ext_resource path="res://src/Levels/SigmaPalace/CreditsScene.gd" type="Script" id=12]
[ext_resource path="res://src/WeaponGet/flash.png" type="Texture" id=13]
[ext_resource path="res://src/Effects/Textures/simple_gradient2.png" type="Texture" id=14]
[ext_resource path="res://src/Levels/music_player.gd" type="Script" id=15]
[ext_resource path="res://src/Sounds/OST - MainTheme E-Capcom Remix.ogg" type="AudioStream" id=16]
[ext_resource path="res://src/Sounds/OST - Capsule.ogg" type="AudioStream" id=17]
[ext_resource path="res://src/Sounds/OST - TrueSigma - Loop.ogg" type="AudioStream" id=18]
[ext_resource path="res://src/Sounds/OST - Vile - Loop.ogg" type="AudioStream" id=19]
[ext_resource path="res://src/Sounds/OST - Vile - Intro.ogg" type="AudioStream" id=20]
[ext_resource path="res://src/Sounds/OST - AngryBoss - Intro.ogg" type="AudioStream" id=21]
[ext_resource path="res://src/Sounds/OST - AngryBoss - Loop.ogg" type="AudioStream" id=22]
[ext_resource path="res://src/Levels/PitchBlack/light.png" type="Texture" id=23]
[ext_resource path="res://src/Sounds/Bike - RunLoop.wav" type="AudioStream" id=24]
[ext_resource path="res://src/Fonts/X8bitmapfont.fnt" type="BitmapFont" id=25]
[ext_resource path="res://src/Title/title_megaman.png" type="Texture" id=26]
[ext_resource path="res://src/Title/title_x8_06.png" type="Texture" id=27]
[ext_resource path="res://src/Effects/Textures/simple_gradient4.png" type="Texture" id=28]
[ext_resource path="res://src/Levels/NoahsPark/VisuaSkip.gd" type="Script" id=29]
[ext_resource path="res://src/Effects/Textures/skip_icon.png" type="Texture" id=30]
[ext_resource path="res://src/Effects/Textures/skip_circle.png" type="Texture" id=31]
[ext_resource path="res://src/Levels/SigmaPalace/SkipEnding.gd" type="Script" id=32]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/Flash = 0.0
shader_param/Charge = 0.0
shader_param/Color = Color( 0, 0.501961, 0.972549, 1 )
shader_param/MainColor1 = Color( 0, 0.501961, 0.972549, 1 )
shader_param/MainColor2 = Color( 0, 0.25098, 0.941176, 1 )
shader_param/MainColor3 = Color( 0.12549, 0.188235, 0.501961, 1 )
shader_param/MainColor4 = Color( 0.470588, 0.847059, 0.941176, 1 )
shader_param/MainColor5 = Color( 0.313726, 0.627451, 0.941176, 1 )
shader_param/MainColor6 = Color( 0.0941176, 0.345098, 0.690196, 1 )
shader_param/R_MainColor1 = Color( 0, 0.501961, 0.972549, 1 )
shader_param/R_MainColor2 = Color( 0, 0.25098, 0.941176, 1 )
shader_param/R_MainColor3 = Color( 0.12549, 0.188235, 0.501961, 1 )
shader_param/R_MainColor4 = Color( 0.470588, 0.847059, 0.941176, 1 )
shader_param/R_MainColor5 = Color( 0.313726, 0.627451, 0.941176, 1 )
shader_param/R_MainColor6 = Color( 0.0941176, 0.345098, 0.690196, 1 )
shader_param/CrystalColor1 = Color( 0.909804, 1, 0.733333, 1 )
shader_param/CrystalColor2 = Color( 0.541176, 0.854902, 0.341176, 1 )
shader_param/CrystalColor3 = Color( 0.207843, 0.619608, 0.415686, 1 )
shader_param/R_CrystalColor1 = Color( 0.941176, 0.941176, 0.941176, 1 )
shader_param/Alert = 0.0
shader_param/R_CrystalColor2 = Color( 0.941176, 0.25098, 0.0627451, 1 )
shader_param/R_CrystalColor3 = Color( 0.447059, 0.133333, 0.215686, 1 )
shader_param/tolerance = 0.01
shader_param/Alpha = 1.0

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 1 )
shader_param/skip_first_row = false
shader_param/use_palette_alpha = false
shader_param/fps = 7.0
shader_param/palette = ExtResource( 6 )

[node name="CreditsScene" type="Node2D"]
script = ExtResource( 12 )
song = ExtResource( 16 )

[node name="Visuals" type="Node2D" parent="."]

[node name="ElevatorPlatform" type="Sprite" parent="Visuals"]
position = Vector2( 199, 163 )
texture = ExtResource( 8 )
script = ExtResource( 3 )

[node name="X" type="AnimatedSprite" parent="Visuals/ElevatorPlatform"]
material = SubResource( 1 )
position = Vector2( 26, -30 )
z_index = 1
frames = ExtResource( 9 )
animation = "idle"
frame = 25
playing = true
flip_h = true

[node name="loop" type="AudioStreamPlayer2D" parent="Visuals/ElevatorPlatform"]
stream = ExtResource( 24 )
volume_db = -80.0
pitch_scale = 0.51
autoplay = true
max_distance = 600.0
bus = "SFX"

[node name="ElevatorWalls" type="Sprite" parent="Visuals"]
material = ExtResource( 7 )
position = Vector2( 199, 112 )
z_index = -2
texture = ExtResource( 4 )
flip_h = true
region_enabled = true
region_rect = Rect2( 0, 0, 464, 288 )
script = ExtResource( 10 )
speed = 120

[node name="BG" type="Sprite" parent="Visuals"]
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
material = SubResource( 2 )
position = Vector2( 379, 175 )
z_index = -3
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 800, 1560 )
script = ExtResource( 11 )

[node name="Credits" type="Node2D" parent="."]
position = Vector2( 0, 308 )
z_index = 50
z_as_relative = false

[node name="megaman" type="Sprite" parent="Credits"]
visible = false
position = Vector2( -62, 0 )
texture = ExtResource( 26 )

[node name="x8" type="Sprite" parent="Credits"]
visible = false
position = Vector2( 39, -2 )
texture = ExtResource( 27 )

[node name="richTextLabel" type="RichTextLabel" parent="Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.0
margin_top = 257.0
margin_right = 123.0
margin_bottom = 1541.0
custom_colors/font_color_shadow = Color( 0.105882, 0, 0.54902, 0.486275 )
custom_fonts/normal_font = ExtResource( 25 )
bbcode_enabled = true
bbcode_text = "[center]Mega Man X8
16-bit









[color=#47a1fc]A fangame by[/color]
Alysson da Paz










[color=#47a1fc]Consulting and QA[/color]
LuizMiguel






[color=#47a1fc]Spanish Localization[/color]
Roberto Carlos Martinez Escudero





[color=#47a1fc]MM1 Boss Battle Remix[/color]
Samuel \"Streg\" Oliveira





[color=#47a1fc]Sprites, Sounds and 
Background rips[/color]
Sprites INC
The Spriters Resource
The Sounds Resource
VGMaps.com
[color=#47a1fc]Thanks to all the 
awesome contributors![/color]



[color=#47a1fc]Playtesters[/color]
LuizMiguel
Medivelion
FadinTV
Megamanx_Zero
Shinobi_Speedruns
Koalacwb64
Vhevert
JandersonSilvaJS
SilverZ



[color=#47a1fc]Special Thanks[/color]
HeaxDePolo
ZafersanToksoz
QuartoDoDu
KaneTV
JulinhoRockman
itzBruHere
OlimTR
CalebHart42
Nostalgia_Games_BR
Meruziin
Fubadas
BadGokuH
Vubidugil
Fixxer0
Bacaxi15
Xopa
MazaKoopa
Orlandobrx
LuizTeles
Zekinoma
LuizMiguel
[color=#47a1fc]And thanks to 
all of the Megaman X
Speedrunning Community![/color]







[color=#47a1fc]Based on[/color]
MEGAMAN X8
Paradise Lost

By CAPCOM
[/center]"
text = "Mega Man X8
16-bit









A fangame by
Alysson da Paz










Consulting and QA
LuizMiguel






Spanish Localization
Roberto Carlos Martinez Escudero





MM1 Boss Battle Remix
Samuel \"Streg\" Oliveira





Sprites, Sounds and 
Background rips
Sprites INC
The Spriters Resource
The Sounds Resource
VGMaps.com
Thanks to all the 
awesome contributors!



Playtesters
LuizMiguel
Medivelion
FadinTV
Megamanx_Zero
Shinobi_Speedruns
Koalacwb64
Vhevert
JandersonSilvaJS
SilverZ



Special Thanks
HeaxDePolo
ZafersanToksoz
QuartoDoDu
KaneTV
JulinhoRockman
itzBruHere
OlimTR
CalebHart42
Nostalgia_Games_BR
Meruziin
Fubadas
BadGokuH
Vubidugil
Fixxer0
Bacaxi15
Xopa
MazaKoopa
Orlandobrx
LuizTeles
Zekinoma
LuizMiguel
And thanks to 
all of the Megaman X
Speedrunning Community!







Based on
MEGAMAN X8
Paradise Lost

By CAPCOM
"

[node name="richTextLabel2" type="RichTextLabel" parent="Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.0
margin_top = 1546.0
margin_right = 106.0
margin_bottom = 5218.0
custom_colors/font_color_shadow = Color( 0.105882, 0, 0.54902, 0.486275 )
custom_fonts/normal_font = ExtResource( 25 )
bbcode_enabled = true
bbcode_text = "[center][color=#47a1fc]Original Megaman X8 Staff[/color]

[color=#47a1fc]Director[/color]
Eiro Shirahama

[color=#47a1fc]Executive Producer[/color]
Tatsuya Minami

[color=#47a1fc]Line Producer[/color]
Tatsuya Kitabayashi

[color=#47a1fc]Main Game Designer[/color]
Hiroyuki Yamato

[color=#47a1fc]Game Designers[/color]
Shino Okamura
Yuji Hayakawa
Junhiro Nishiyama

[color=#47a1fc]Scenario Writers[/color]
Makoto Ikehara
Kosuke Nasu

[color=#47a1fc]Visual Director
and Character Design[/color]
Tatsuya Yoshikawa

[color=#47a1fc]Lead Character Design 
and Animators[/color]
Katsumi Toda
Tetsuya Enomoto
Tomokazu Kadoue

[color=#47a1fc]Character Design
 and Animators[/color]
Koujirou Ogiwara
Tetsuji Shimazu
Hirochika Nagaki

[color=#47a1fc]Background Concept
Art Designer[/color]
Shigenori Kiwata

[color=#47a1fc]Lead Background
Designer[/color]
Satoshi Ueda

[color=#47a1fc]Background Design[/color]
Naomi Goto
Yasuaki Kishimoto
Tomomi Fujiwara
Daisuke Taneda

[color=#47a1fc]Visual Effects Design[/color]
Megumi Doi
Junichirou Ogawa
Keisuke Ando

[color=#47a1fc]2D Object Design[/color]
Miho Kobayashi
Hayato Konishi

[color=#47a1fc]Technical Program Support[/color]
Keiji Kubori

[color=#47a1fc]Sound Composers[/color]
Yuko Komiyama
Shinya Okada

[color=#47a1fc]Sound Effects Design[/color]
Gaku Komura
Yoshiki Sandō
Atsuko Fujitani

[color=#47a1fc]Sound Technical Support[/color]
Tomohiro Masuda
Shigenobu Komori

[color=#47a1fc]Promotional Video Editors[/color]
Yoshimi Zaima
Yukiko Sasaki

[color=#47a1fc]Title Logo Design[/color]
Satoshi Ukai

[color=#47a1fc]Manual Design[/color]
Yumiko Uchida

[color=#47a1fc]Publicity[/color]
Norikazu Fujikawa
Kazuo Chouya
Hiroko Nakamura

[color=#47a1fc]Sales[/color]
Tsuyoshi Kanda
Yasuhiro Kobayashi

[color=#47a1fc]Marketing[/color]
Yuji Ito

[color=#47a1fc]Promotion[/color]
Asuka Hayashi

[color=#47a1fc]Publishing Team 
Suleputer Label[/color]
Mareo Yamada

[color=#47a1fc]Merchandising Team[/color]
Kenichi Tanaka

[color=#47a1fc]Localization[/color]
Ben Judd
David Crislip

[color=#47a1fc]International Business Departament[/color]
Masayuki Fukumoto
Noriko Katou

[color=#47a1fc]Public Relations[/color]
Melinda Mongelluzzo
Alicia Kim

[color=#47a1fc]Marketing[/color]
Todd Thorson
Bonnie Scott

[color=#47a1fc]Project Management[/color]
Robert Johnson
Nathan Williams
Rey Jimenez

[color=#47a1fc]Rockman Club[/color]
Takahiro Tokuda
Masahiro Ikegawa
Chikahiro Kawanishi
Toshio Kou
Hirokazu Teranishi

[color=#47a1fc]Testers[/color]
Naoki Kamura
Shōji Araki
Tetsunori Matsuoka
Masaki Tsujioka
Takeshi Kawasaki
Keita Nakajima
Yusuke Nakazawa
Ken Sasaki
Teruhisa Watanabe
Shintaro Okada
Shinnosuke Kontani
Arisa Hisakuni

[color=#47a1fc]Value Wave[/color]

[color=#47a1fc]Main Programmer[/color]
Soutarou Arakawa

[color=#47a1fc]Programmers[/color]
Yoshinobu Yasuhara
Kazuteru Sonoyama
Hiroshi Niki
Kazuya Shinmoto
Masaru Ueno
Daisuke Kaneko

[color=#47a1fc]Technical Visual Director[/color]
Katsumi Kawagoe

[color=#47a1fc]Game Planner[/color]
Naotake Aboshi

[color=#47a1fc]Sound Composer[/color]
Naoto Tanaka

[color=#47a1fc]ProSoft[/color]

[color=#47a1fc]Boss Programmers[/color]
Jun Yoshioka
Koji Uehara
Yukitoshi Tsuzuki

[color=#47a1fc]Digital Zero[/color]

[color=#47a1fc]Technical Visual Director[/color]
Shinji Nariai

[color=#47a1fc]Lead Background Designer[/color]
Jun Takeda

[color=#47a1fc]Background Design[/color]
Yoshitaka Yamano
Ryo Katori
Hideyuki Takagi
Makoto Kayano
Yoshimi Nakamura
Takayuki Kakubari
Takahiro Komatsu
Kazuma Yamagishi
Nobuyuki Toshimitsu
Toshiya Arai
Takuya Matsuda
Shigeo Tamura
Yusuke Sakairi

[color=#47a1fc]Lead Animator[/color]
Kazuhisa Tomita

[color=#47a1fc]Animators[/color]
Keiichirou Kusanagi
Takashi Hashimoto

[color=#47a1fc]Kamikaze Douga[/color]

[color=#47a1fc]Animation Director[/color]
Toshihisa Yokoshima

[color=#47a1fc]Art Director[/color]
Rie Suzuki

[color=#47a1fc]Technical Director[/color]
Junpei Mizusaki

[color=#47a1fc]Character Animation[/color]
Takanobu Mizuno
Kodai Sato

[color=#47a1fc]Character Modeling[/color]
Junko Nakada
Masami Tanzi
Yukiko Hirokawa
Hitoshi Oguri
Shinichi Eguchi

[color=#47a1fc]Voice Actors[/color]
Mark Gatha
Lucas Gilbertson
Jeffrey Watson
Elionor Holt
Dave Pettitt
Mariette Sluyter
Meredith Taylor-Parry
Chris Simms
Roger Rhodes
Jonathan Love
Randall Wiebe
Tommy James

[color=#47a1fc]Produced in association with
The Ocean Group - Canada[/color]

[color=#47a1fc]Production Manager[/color]
Diana Gage

[color=#47a1fc]Production Coordinator[/color]
Dennis Hrehoriac

[color=#47a1fc]Voice Directors[/color]
James Corrigall
Karl Willems

[color=#47a1fc]Recording Engineers[/color]
Brad Belden
Ryan Manning

[color=#47a1fc]Assistant Engineers[/color]
Cam Desmond
Jonathan Nostrud

[color=#47a1fc]Recorded At
Blue Waters Studios[/color]

[color=#47a1fc]Special Thanks[/color]
Keiji Inafune
Kimio Yamazoe
Ayatomo Tanimoto
Setsuo Yamamoto
Yoshito Ito
Yasuyuki Tsujino
Masako Honma
Kazuki Matsue
Masaki Moritsugu
Sawako Yamamoto
Akio Watanabe
Toshiji Hazumi
Yuki Kawaguchi


and CAPCOM All Staff!













Thanks for Playing!
[/center]"
text = "Original Megaman X8 Staff

Director
Eiro Shirahama

Executive Producer
Tatsuya Minami

Line Producer
Tatsuya Kitabayashi

Main Game Designer
Hiroyuki Yamato

Game Designers
Shino Okamura
Yuji Hayakawa
Junhiro Nishiyama

Scenario Writers
Makoto Ikehara
Kosuke Nasu

Visual Director
and Character Design
Tatsuya Yoshikawa

Lead Character Design 
and Animators
Katsumi Toda
Tetsuya Enomoto
Tomokazu Kadoue

Character Design
 and Animators
Koujirou Ogiwara
Tetsuji Shimazu
Hirochika Nagaki

Background Concept
Art Designer
Shigenori Kiwata

Lead Background
Designer
Satoshi Ueda

Background Design
Naomi Goto
Yasuaki Kishimoto
Tomomi Fujiwara
Daisuke Taneda

Visual Effects Design
Megumi Doi
Junichirou Ogawa
Keisuke Ando

2D Object Design
Miho Kobayashi
Hayato Konishi

Technical Program Support
Keiji Kubori

Sound Composers
Yuko Komiyama
Shinya Okada

Sound Effects Design
Gaku Komura
Yoshiki Sandō
Atsuko Fujitani

Sound Technical Support
Tomohiro Masuda
Shigenobu Komori

Promotional Video Editors
Yoshimi Zaima
Yukiko Sasaki

Title Logo Design
Satoshi Ukai

Manual Design
Yumiko Uchida

Publicity
Norikazu Fujikawa
Kazuo Chouya
Hiroko Nakamura

Sales
Tsuyoshi Kanda
Yasuhiro Kobayashi

Marketing
Yuji Ito

Promotion
Asuka Hayashi

Publishing Team 
Suleputer Label
Mareo Yamada

Merchandising Team
Kenichi Tanaka

Localization
Ben Judd
David Crislip

International Business Departament
Masayuki Fukumoto
Noriko Katou

Public Relations
Melinda Mongelluzzo
Alicia Kim

Marketing
Todd Thorson
Bonnie Scott

Project Management
Robert Johnson
Nathan Williams
Rey Jimenez

Rockman Club
Takahiro Tokuda
Masahiro Ikegawa
Chikahiro Kawanishi
Toshio Kou
Hirokazu Teranishi

Testers
Naoki Kamura
Shōji Araki
Tetsunori Matsuoka
Masaki Tsujioka
Takeshi Kawasaki
Keita Nakajima
Yusuke Nakazawa
Ken Sasaki
Teruhisa Watanabe
Shintaro Okada
Shinnosuke Kontani
Arisa Hisakuni

Value Wave

Main Programmer
Soutarou Arakawa

Programmers
Yoshinobu Yasuhara
Kazuteru Sonoyama
Hiroshi Niki
Kazuya Shinmoto
Masaru Ueno
Daisuke Kaneko

Technical Visual Director
Katsumi Kawagoe

Game Planner
Naotake Aboshi

Sound Composer
Naoto Tanaka

ProSoft

Boss Programmers
Jun Yoshioka
Koji Uehara
Yukitoshi Tsuzuki

Digital Zero

Technical Visual Director
Shinji Nariai

Lead Background Designer
Jun Takeda

Background Design
Yoshitaka Yamano
Ryo Katori
Hideyuki Takagi
Makoto Kayano
Yoshimi Nakamura
Takayuki Kakubari
Takahiro Komatsu
Kazuma Yamagishi
Nobuyuki Toshimitsu
Toshiya Arai
Takuya Matsuda
Shigeo Tamura
Yusuke Sakairi

Lead Animator
Kazuhisa Tomita

Animators
Keiichirou Kusanagi
Takashi Hashimoto

Kamikaze Douga

Animation Director
Toshihisa Yokoshima

Art Director
Rie Suzuki

Technical Director
Junpei Mizusaki

Character Animation
Takanobu Mizuno
Kodai Sato

Character Modeling
Junko Nakada
Masami Tanzi
Yukiko Hirokawa
Hitoshi Oguri
Shinichi Eguchi

Voice Actors
Mark Gatha
Lucas Gilbertson
Jeffrey Watson
Elionor Holt
Dave Pettitt
Mariette Sluyter
Meredith Taylor-Parry
Chris Simms
Roger Rhodes
Jonathan Love
Randall Wiebe
Tommy James

Produced in association with
The Ocean Group - Canada

Production Manager
Diana Gage

Production Coordinator
Dennis Hrehoriac

Voice Directors
James Corrigall
Karl Willems

Recording Engineers
Brad Belden
Ryan Manning

Assistant Engineers
Cam Desmond
Jonathan Nostrud

Recorded At
Blue Waters Studios

Special Thanks
Keiji Inafune
Kimio Yamazoe
Ayatomo Tanimoto
Setsuo Yamamoto
Yoshito Ito
Yasuyuki Tsujino
Masako Honma
Kazuki Matsue
Masaki Moritsugu
Sawako Yamamoto
Akio Watanabe
Toshiji Hazumi
Yuki Kawaguchi


and CAPCOM All Staff!













Thanks for Playing!
"

[node name="credits" type="Label" parent="Credits"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.0
margin_top = 68.0
margin_right = 134.0
margin_bottom = 847.0
custom_colors/font_color = Color( 0.639216, 0.713726, 0.898039, 1 )
custom_colors/font_color_shadow = Color( 0.0212727, 0.0892019, 0.286621, 0.545098 )
custom_fonts/font = ExtResource( 25 )
text = "Mega Man X8
16-bit



A fangame by
Alysson da Paz



Spanish translation courtesy of
Omega_Rob_X



Consulting and QA
Luiz Miguel



Testing
LuizMiguel
Medivelion
FadinTV
Megamanx_Zero
Shinobi_Speedruns
Koalacwb64
Vhevert
JandersonSilvaJS
SilverZ



Special Thanks
LuizTeles
Meruziin
Nostalgia_Games_BR
HeaxDePolo
Fixxer0
Bacaxi15
Xopa
MazaKoopa
Fubadas
BadGokuh
QuartoDoDu
Vubidugil
KaneTV
itzBruHere
JulinhoRockman
OllimTR




A Fangame based on
MEGAMAN X8
Paradise Lost

By CAPCOM
and it's incredible staff
"
align = 1

[node name="bottom_cover" type="Sprite" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 394, 215 )
scale = Vector2( 14, 0.5 )
z_index = 60
texture = ExtResource( 28 )

[node name="top_cover" type="Sprite" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 394, 10 )
scale = Vector2( 14, 0.5 )
z_index = 60
texture = ExtResource( 28 )
flip_v = true

[node name="CreditsBG" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 464, 116 )
rotation = -1.5708
scale = Vector2( 6, 1 )
z_index = 10
texture = ExtResource( 14 )

[node name="sprite" type="Sprite" parent="CreditsBG"]
position = Vector2( 0, 368 )
scale = Vector2( 0.16, 3 )
texture = ExtResource( 13 )

[node name="Music Player" type="AudioStreamPlayer" parent="."]
pause_mode = 2
bus = "Music"
script = ExtResource( 15 )
boss_intro = ExtResource( 18 )
boss_song = ExtResource( 18 )
angry_boss_intro = ExtResource( 21 )
angry_boss_song = ExtResource( 22 )
capsule_song = ExtResource( 17 )
miniboss_intro = ExtResource( 20 )
miniboss_song = ExtResource( 19 )
play_angry_boss_theme = false

[node name="screencover" type="Sprite" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 197, 120 )
scale = Vector2( 100, 100 )
z_index = 1000
texture = ExtResource( 23 )

[node name="Skipper" type="CanvasLayer" parent="."]
layer = 0
script = ExtResource( 32 )

[node name="VisualSkip" type="Control" parent="Skipper"]
margin_left = 363.0
margin_top = 189.0
margin_right = 395.0
margin_bottom = 221.0
script = ExtResource( 29 )

[node name="textureProgress" type="TextureProgress" parent="Skipper/VisualSkip"]
margin_right = 40.0
margin_bottom = 40.0
max_value = 200.0
value = 200.0
texture_progress = ExtResource( 31 )
fill_mode = 4

[node name="textureRect" type="TextureRect" parent="Skipper/VisualSkip"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 30 )
